Updated build android

--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -29,7 +29,7 @@
                 Welcome guest!</div>
           </div>
           <div class="page-content">
-            <div class="block-title">Navigation</div>
+            <div class="block-title">Main Navigation</div>
               <div class="list">
                 <ul>
                   <li>
@@ -54,19 +54,12 @@
                     </a>
                   </li>
                   <li>
-                    <a href="/load-something-that-doesnt-exist/" class="item-content item-link panel-close">
+                    <a href="/login/" class="item-content item-link panel-close">
                       <div class="item-inner">
                         <div class="item-title">Login</div>
                       </div>
                     </a>
                   </li>
-                  <li>
-                      <a href="/tabbar/" class="item-content item-link panel-close">
-                        <div class="item-inner">
-                          <div class="item-title">Tabbar</div>
-                        </div>
-                      </a>
-                    </li>
                 </ul>
               </div>
           </div>
@@ -104,38 +97,17 @@
                   Now on its 21th year of serving the International Filipino 
                   Community and partner of an economy-building industry, 
                 </p>
-                <p>
-                  GP's 
-                  will to serve with as much dedication as its founder, has never wanted.
-                  From a Peso remittance service in its younger years, later on added 
-                  cargo delivery to its door-to-door service. 
-                </p>
               <div class="card-footer">
-                  <a href="/about/" class="link">Read More</a>
+                  <button class="button"><a href="/about/" class="link">Read More</a></button>
               </div>
             </div>
           </div>
-          <!-- <div class="card demo-facebook-card">
-              <div class="demo-fb-cardheader" style="padding: 10px 10px;">
-                <div class="demo-facebook-avatar">
-                  <img src="img/logo.png" width="34" height="34"/></div>
-                <div class="demo-facebook-name">GP EXPRESS CARGO</div>
-                <div class="demo-facebook-date">Monday at 3:47 PM</div>
-              </div>
-              <div class="card-content">
-                  <p style="padding: 0px 10px;">What a nice photo of the team!</p>
-                <img src="img/gpxteam/01.jpg" width="100%"/>
-              </div>
-              <div class="card-footer">
-                <button class="link button pb-popup" id="clickImage">All image</button>
-              </div>
-          </div> -->
           <div class="block-title">News and Activities</div>
           <div class="list">
             <ul>
               <li class="accordion-item"><a href="#" class="item-content item-link">
                   <div class="item-inner">
-                    <div class="item-title">Item 1</div>
+                    <div class="item-title">Activity 1</div>
                   </div></a>
                 <div class="accordion-item-content">
                   <div class="block">
@@ -148,7 +120,7 @@
               </li>
               <li class="accordion-item"><a href="#" class="item-content item-link">
                   <div class="item-inner">
-                    <div class="item-title">Item 2</div>
+                    <div class="item-title">Activity 2</div>
                   </div></a>
                 <div class="accordion-item-content">
                   <div class="block">
@@ -161,7 +133,7 @@
               </li>
               <li class="accordion-item"><a href="#" class="item-content item-link">
                   <div class="item-inner">
-                    <div class="item-title">Item 3</div>
+                    <div class="item-title">Activity 3</div>
                   </div></a>
                 <div class="accordion-item-content">
                   <div class="block">
@@ -172,10 +144,37 @@
                   </div>
                 </div>
               </li>
+              <li class="accordion-item"><a href="#" class="item-content item-link">
+                <div class="item-inner">
+                  <div class="item-title">Activity 4</div>
+                </div></a>
+                <div class="accordion-item-content">
+                  <div class="block">
+                      <p>Event will be 
+                          triggered right before accordion content starts its 
+                          closing animation. prevent contains function that will prevent accordion
+                          from closing when called</p>
+                  </div>
+                </div>
+              </li>
+              <li class="accordion-item"><a href="#" class="item-content item-link">
+                <div class="item-inner">
+                  <div class="item-title">Activity 5</div>
+                </div></a>
+                <div class="accordion-item-content">
+                  <div class="block">
+                      <p>Event will be 
+                          triggered right before accordion content starts its 
+                          closing animation. prevent contains function that will prevent accordion
+                          from closing when called</p>
+                  </div>
+                </div>
+              </li>
             </ul>
           </div>
 
-          <div class="block-title searchbar-hide-on-search">Page Loaders & Router</div>
+          <!-- 
+            <div class="block-title searchbar-hide-on-search">Page Loaders & Router</div>
           <div class="list links-list searchbar-hide-on-search">
             <ul>
               <li>
@@ -195,6 +194,7 @@
                 </li>
             </ul>
           </div>
+         -->
         </div>
       </div>
     </div>
