--- a/platforms/android/app/src/main/assets/www/pages/about.html
+++ b/platforms/android/app/src/main/assets/www/pages/about.html
@@ -27,7 +27,7 @@
             {{/each}}
           </div>
           <div class="card-footer"></div>
-        </div>
+      </div>
     </div>
   </div>
 </template>
@@ -41,16 +41,12 @@
           'GP Express Cargo has always been the herald of change. Now on its 21th year of serving the International Filipino Community and partner of an economy-building industry',
            'GP\'s will to serve with as much dedication as its founder, has never wanted. From a Peso remittance service in its younger years, later on added cargo delivery to its door-to-door service.',
             'Its computerized and round-the-clock service is an assurance of fast and reliable door-to-door delivery of remittance or balikbayan box, 24 hours a day, seven days a week, 365 days a year.',
-          'At present, it serves 22 countries all over the world and has provincial branches in almost all the regions of the Philippines. Proof of the company\'s commitment to serve the overseas Filipino community.'],
+          'At present, it serves 22 countries all over the world and has provincial branches in almost all the regions of the Philippines. Proof of the company\'s commitment to serve the overseas Filipino community.'
+        ],
       }
     },
     // Component Methods
-    methods: {
-      callAlert: function () {
-        var self = this;
-        self.$app.dialog.alert('Hello World');
-      },
-    },
+    methods: {},
     // Page Events
     on: {}
   }
