--- a/www/index.html
+++ b/www/index.html
@@ -77,9 +77,9 @@
         </div>
         <!-- Scrollable page content-->
         <div class="page-content">
-          <div class="page">
+          <div class="page block">
             <!-- start form -->
-            <div class="page-content block">
+            <div class="page-content">
                 <div class="login-screen-title"><b>GP EXPRESS</b></div>
                 <form>
                     <div class="list">
@@ -113,7 +113,7 @@
                         <a class="button button-fill color-red" id="signUp">
                             Sign Up
                         </a>
-                        <a class="button button-fill color-blue" @click="signIn">
+                        <a class="button button-fill color-blue" id="signIn">
                             Sign In
                         </a>
                     </div>
