--- a/www/index.html
+++ b/www/index.html
@@ -110,7 +110,7 @@
                         </ul>
                     </div>
                     <div class="segmented segmented-raised">
-                        <a class="button button-fill color-red" id="signUp">
+                        <a href="/welcome/" class="button button-fill color-red">
                             Sign Up
                         </a>
                         <a class="button button-fill color-blue" id="signIn">
